# genetic_algorithm

./: CMakeLists.txt  CMakeProject3.cpp  CMakeProject3.h  api_new.h  pyapi.cpp
